# fleet

./: CMakeLists.txt  README.md
api/: pom.xml
api/src/main/java/com/stelch/fleet/controllers/: JobController.java
api/src/main/java/com/stelch/fleet/handlers/: ResponseHandler.java
api/src/main/java/com/stelch/fleet/models/: Job.java  JobEvent.java
database/: schema.hcl  schema.pg.hcl
docker/: docker-compose.yaml
microservices/internal-edge/: service-definition.md
microservices/internal-edge/protos/: internal_edge.proto
microservices/internal-edge/src/protos/: internal_edge.pb.cc  internal_edge.pb.h
microservices/internal-edge/tools/: proto_gen.sh
tracking/: pom.xml
tracking/src/main/java/com/stelch/fleet/: FleetApplication.java
tracking/src/main/java/com/stelch/fleet/controllers/: BasicController.java  JobController.java
tracking/src/main/java/com/stelch/fleet/models/: Job.java  JobEvent.java  Person.java
tracking/src/main/java/com/stelch/fleet/utils/: WebEmbeddable.java
